Changing basic font in articles

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -19,9 +19,9 @@ article{
 	}
 	.entry-content{
 		line-height: 1.7em;
-		font-family: "PT Serif Caption";
+		font-family: "Philosopher";
 		//font-weight: 300;
-		font-size: 0.9em;
+		font-size: 1em;
 		color: #1d1d1d;
 		text-align: justify;
 		a{
