--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -4,4 +4,4 @@ $font-mono: Consolas, Monaco, Menlo, "Andale Mono", "lucida console", "Courier N
 //@import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://fonts.googleapis.com/css?family=Cuprum&subset=latin,cyrillic);
 @import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic);
-
+@import url(http://fonts.googleapis.com/css?family=Philosopher:400,700,400italic&subset=latin,cyrillic);
