--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -44,22 +44,22 @@ $pre-border: $color-gray03;
 article{
 	code, pre{
 		background: $pre-bg;
-		border: 1px solid $pre-border;
+		border: 1px solid #5D7075;
 		font-family: $font-mono;
 	}
 	code{
 		font-size: 0.9em;
 		padding: 1px 3px;
 		margin: 0 3px;
-		@include border-radius(5px);
+		//@include border-radius(1px);
 	}
 	pre{
-		font-size: 1 / 0.9em;
+		font-size: 1em;
 		line-height: 1.5;
 		margin-top: 10px;
 		padding: 5px 15px;
 		overflow-x: auto;
-		@include border-radius(5px);
+		//@include border-radius(1px);
 		code{
 			background: none;
 			border: none;
