--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -4,7 +4,7 @@ single: true
 ---
 
 <article class="post">{% include article.html %}</article>
-{% if site.disqus_short_name %}
+{% if site.disqus_short_name and page.comments == true %}
 <section id="comment">
     <h1 class="title">Comments</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
