And again change fonts

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -19,7 +19,7 @@ article{
 	}
 	.entry-content{
 		line-height: 1.7em;
-		font-family: "Philosopher";
+		font-family: "PT Serif";
 		//font-weight: 300;
 		font-size: 1em;
 		color: #1d1d1d;
