--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -27,7 +27,8 @@ article{
 		a{
 			text-decoration: underline;
 			&:hover{
-				text-shadow: 0px 0px 2px #717171;
+				color: #1440D1;
+				text-shadow: 0px 0px 2px #2657F7;
 			}
 		}
 		.more-link{
