--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -19,7 +19,7 @@ $header-height: 30px;
 	}
 	h1{
 		float: left;
-		font-weight: 300;
+		font-weight: 700;
 		font-size: 30px;
 		@media screen and (max-width: 1040px){
 			float: none;
@@ -29,6 +29,7 @@ $header-height: 30px;
 #main-nav{
 	float: left;
 	margin-left: 30px;
+	font-size: 1.1em;
 	@media screen and (max-width: 1040px){
 		float: none;
 		margin-left: 0;
@@ -59,8 +60,8 @@ $header-height: 30px;
 				&:after{
 					content: "\f078";
 					color: $color-gray03;
-					font: 12px;
-					padding-left: 10px;
+					font-size: 1.1em;
+					//padding-left: 10px;
 				}
 				&:only-child{
 					&:after{
@@ -290,7 +291,7 @@ $header-height: 30px;
 			padding: 6px 15px 6px 35px;
 			width: 100px;
 			@include transition(0.3s);
-			@include border-radius(15px);
+			//@include border-radius(15px);
 			&:focus, &:active{
 				background: #fff;
 				border-top: 1px solid $color-gray03;
@@ -310,7 +311,7 @@ $header-height: 30px;
 			}
 		}
 		a{
-			@include border-radius(50%);
+			//@include border-radius(50%);
 			@include inline-block;
 			text-indent: -9999px;
 			margin-right: 15px;
