--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -18,5 +18,5 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	{% include custom/head.html %}
 	{% include custom/piwik_analytics.html %}
-	{%% include custom/gauges_analytics.html %}
+	{% include custom/gauges_analytics.html %}
 </head>
