--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -3,3 +3,4 @@
 {% include disqus.html %}
 {% include google_analytics.html %}
 {% include custom/after_footer.html %}
+{% include custom/gauges_analytics.html %}
